# arbok_inspector

./: .gitignore  README.md  debug_nb.ipynb  main.py  pyproject.toml  test.db
arbok_inspector/: dev.py  linux_run.py  main.py  state.py  test.db-shm  test.db-wal  windows_run.py
arbok_inspector/.nicegui/: storage-general.json
arbok_inspector/analysis/: AnalysisBase.py  __init__.py  analysis_base.py  find_peaks_analysis.py  fit_gaussian_analysis.py  prepare_data.py
arbok_inspector/classes/: base_run.py  dim.py  qcodes_run.py  run.py
arbok_inspector/configurations/: 2d_plot.json
arbok_inspector/helpers/: __init__.py  string_formaters.py  unit_formater.py
arbok_inspector/pages/: database_browser.py  greeter.py  run_view.py
arbok_inspector/widgets/: __init__.py  build_analysis_selector.py  build_run_selecter.py  build_run_view_actions.py  build_xarray_grid.py  build_xarray_html.py  day_selector.py  json_plot_settings_dialog.py  run_selector.py  update_day_selecter.py  update_run_selecter.py
