[project]
name = "arbok-inspector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.8",
    "nicegui>=2.24.2",
    "nodejs>=0.1.1",
    "plotly>=6.3.0",
    "qcodes>=0.53.0",
    "xarray>=2025.9.0",
]

[project.scripts]
arbok_inspector = "arbok_inspector.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
