[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "arbok-inspector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "minio ~= 7.2",
    "nicegui>=2.24.2",
    "nodejs>=0.1.1",
    "plotly>=6.3.0",
    "psycopg2-binary ~= 2.9",
    "s3fs~=2025.9",
    "SQLAlchemy ~= 2.0",
    "qcodes>=0.53.0",
    "xarray>=2025.9.0",
    "zarr ~= 2.18"
]

[project.scripts]
arbok-inspector = "arbok_inspector.main:ui.run"

[tool.uv]
package = true
