[build-system]
requires = ["setuptools>=61.0", "setuptools-scm","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arbok-inspector"
description = "Browser based QCoDeS database inspector"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "minio ~= 7.2",
    "nicegui~=3.6",
    "nodejs>=0.1.1",
    "plotly~=6.5",
    "psycopg2-binary ~= 2.9",
    "s3fs~=2025.9",
    "SQLAlchemy ~= 2.0",
    "qcodes~=0.54.4",
    "xarray~=2026.1",
    "zarr ~= 2.18",
    "scipy>=1.17.1",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest~=9.0",
    "pytest-cov~=7.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.setuptools.package-data]
arbok_inspector = [
    "configurations/*.json",
]

[project.scripts]
arbok-inspector = "arbok_inspector.main:main"
arbok-inspector-dev = "arbok_inspector.dev:main"

[tool.uv]
package = true
